[♻️ refactor/#31]: 리스트의 경우 Stream.toList()로 변경